[package]
name = "township-rs"
version = "0.1.0"
authors = ["jacksonyeager <jacksonyeager@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.2", features = ["json"] }
csv = "1.1.6"
serde = { version = "1.0.125", features = ["derive"] }
anyhow = "1.0.40"
tokio = { version = "1", features = ["full"] }
dotenv = "0.15.0"